--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     <!-- Header -->
     <header id="unalTop">
       <!-- Logo -->
-      <div class="logo">
+      <div class="logo" style="background-color: #3a3a3a;">
         <a href="https://unal.edu.co">
           <!--[if (gte IE 9)|!(IE)]><!-->
           <svg width="93%" height="93%">
