--- a/index.html
+++ b/index.html
@@ -402,11 +402,105 @@
     <!-- /content wrapper for padding -->
 
     <!-- Contenido -->
-    <main class="detalle">
-      <iframe
-        src="http://34.28.42.134"
-        style="width: 100%; height: calc(100vh - 73px); border: none"
-      ></iframe>
-    </main>
+      <iframe id="myIframe" src="http://34.28.42.134" frameborder="0"
+        style="width: 100vw; height: 100vh; border: none; overflow: hidden;"></iframe>
+        <!--<iframe
+          src="http://34.28.42.134"
+           width="100%" frameborder="0"></iframe>-->
+
+<script>
+  function adjustIframeHeight() {
+    const iframe = document.getElementById("myIframe");
+    if (iframe.contentWindow.document.body) {
+      iframe.style.height = iframe.contentWindow.document.body.scrollHeight + "px";
+    }
+  }
+
+  document.getElementById("myIframe").onload = adjustIframeHeight;
+  window.onresize = adjustIframeHeight;
+</script>
+
+
+      <!-- Footer -->
+      <footer class="clear container-fluid">
+        <div class="row">
+          <nav class="col-lg-3 col-md-3 col-sm-4 col-6 gobiernoLinea">
+            <a href="http://www.legal.unal.edu.co" target="_top">Régimen Legal</a>
+            <a href="http://personal.unal.edu.co" target="_top">Talento humano</a>
+            <a href="http://contratacion.unal.edu.co" target="_top">Contratación</a>
+            <a href="http://personal.unal.edu.co" target="_top">Ofertas de empleo</a>
+            <a href="http://launalcuenta.unal.edu.co/" target="_top">Rendición de cuentas</a>
+            <a href="http://docentes.unal.edu.co/concurso-profesoral/" target="_top">Concurso docente</a>
+            <a href="http://www.pagovirtual.unal.edu.co/" target="_top">Pago Virtual</a>
+            <a href="http://controlinterno.unal.edu.co/" target="_top">Control interno</a>
+            <a href="http://siga.unal.edu.co" target="_top">Calidad</a>
+            <a href="http://unal.edu.co/buzon-de-notificaciones/" target="_self">Buzón de notificaciones</a>
+          </nav>
+          <nav class="col-lg-3 col-md-3 col-sm-4 col-6 gobiernoLinea">
+            <a href="http://correo.unal.edu.co" target="_top">Correo institucional</a>
+            <a href="index.html#">Mapa del sitio</a>
+            <a href="http://redessociales.unal.edu.co" target="_top">Redes Sociales</a>
+            <a href="index.html#">FAQ</a>
+            <a href="http://unal.edu.co/quejas-y-reclamos/" target="_self">Quejas y reclamos</a>
+            <a href="http://unal.edu.co/atencion-en-linea/" target="_self">Atención en línea</a>
+            <a href="http://unal.edu.co/encuesta/" target="_self">Encuesta</a>
+            <a href="index.html#">Contáctenos</a>
+            <a href="http://estadisticas.unal.edu.co/" target="_top">Estadísticas</a>
+            <a href="index.html#">Glosario</a>
+          </nav>
+          <div class="col-lg-4 col-md-4 col-sm-4 col-12 footer-info">
+            <div class="row footer-info-spacing">
+              <p class="col-lg-6 col-md-12 col-sm-12 col-6 contacto">
+                <b>Contacto página web:</b><br />
+                Dirección ...<br />
+                Edificio ...<br />
+                Bogotá D.C., Colombia<br />
+                (+57 1) 316 5000 Ext.
+              </p>
+              <p class="col-lg-6 col-md-12 col-sm-12 col-6 derechos">
+                <a href="https://unal.edu.co/fileadmin/user_upload/docs/legal.pdf" target="_blank">&copy; Copyright
+                  <span class="anio" id="anio"></span>
+                  <script>
+                    document.getElementById("anio").innerHTML = new Date().getFullYear();  
+                  </script>
+                </a><br />
+                Algunos derechos reservados.<br />
+                <a title="Comuníquese con el administrador de este sitio web"
+                  href="mailto:ConvSubaFI_bog@unal.edu.co">ConvSubaFI_bog@unal.edu.co</a><br />
+                <a href="index.html#">Acerca de este sitio web</a><br />
+                Actualización:14/05/21
+              </p>
+            </div>
+          </div>
+          <div class="col-lg-2 col-md-2 col-sm-12 col-12 logos">
+            <div class="row px-3">
+              <div class="col-lg-6 col-md-12 col-sm-6 col-6 no-padding">
+                <div class="row mx-1">
+                  <a class="col-md-12 col-sm-6 col-6" href="http://orgullo.unal.edu.co">
+                    <img class="hidden-print" alt="Orgullo UN" src="images/log_orgullo.png" width="78" height="21" />
+                    <img class="d-none d-print-block" alt="Orgullo UN" src="images/log_orgullo_black.png" width="94"
+                      height="37" />
+                  </a>
+                  <a class="col-md-12 col-sm-6 col-6 imgAgencia" href="http://agenciadenoticias.unal.edu.co">
+                    <img class="hidden-print" alt="Agencia de Noticias" src="images/log_agenc.png" width="94" height="25" />
+                    <img class="d-none d-print-block" alt="Agencia de Noticias" src="images/log_agenc_black.png" width="94"
+                      height="37" />
+                  </a>
+                </div>
+              </div>
+              <div class="col-lg-6 col-md-12 col-sm-6 col-6 no-padding">
+                <div class="row mx-1">
+                  <a class="col-md-12 col-sm-6 col-6" href="https://www.gov.co/">
+                    <img alt="Portal Único del Estado Colombiano" src="images/log_gobiern.png" width="67" height="51" />
+                  </a>
+                  <a class="col-md-12 col-sm-6 col-6" href="http://www.contaduria.gov.co/">
+                    <img alt="Contaduría General de la República" src="images/log_contra.png" width="67" height="51" />
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </footer>
   </body>
 </html>
