urls was taken from deploy

--- a/index.html
+++ b/index.html
@@ -21,42 +21,76 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="./css/frontend.css"
+      href="http://34.28.42.134:8080/css/frontend.css"
       media="all"
     />
     <link
       rel="stylesheet"
       type="text/css"
-      href="./css/bootstrap.min.css"
+      href="http://34.28.42.134:8080/css/bootstrap.min.css"
       media="all"
     />
     <link
       rel="stylesheet"
       type="text/css"
-      href="./css/bootstrap-theme.min.css"
+      href="http://34.28.42.134:8080/css/bootstrap-theme.min.css"
       media="all"
     />
-    <link rel="stylesheet" type="text/css" href="./css/reset.css" media="all" />
-    <link rel="stylesheet" type="text/css" href="./css/unal.css" media="all" />
-    <link rel="stylesheet" type="text/css" href="./css/base.css" media="all" />
     <link
       rel="stylesheet"
       type="text/css"
-      href="./css/tablet.css"
+      href="http://34.28.42.134:8080/css/reset.css"
       media="all"
     />
-    <link rel="stylesheet" type="text/css" href="./css/phone.css" media="all" />
-    <link rel="stylesheet" type="text/css" href="./css/small.css" media="all" />
     <link
       rel="stylesheet"
       type="text/css"
-      href="./css/printer.css"
+      href="http://34.28.42.134:8080/css/unal.css"
+      media="all"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="http://34.28.42.134:8080/css/base.css"
+      media="all"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="http://34.28.42.134:8080/css/tablet.css"
+      media="all"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="http://34.28.42.134:8080/css/phone.css"
+      media="all"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="http://34.28.42.134:8080/css/small.css"
+      media="all"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="http://34.28.42.134:8080/css/printer.css"
       media="print"
     />
 
-    <script src="./js/jquery.js" type="text/javascript"></script>
-    <script src="./js/unal.js" type="text/javascript"></script>
-    <script src="./js/bootstrap.bundle.min.js" type="text/javascript"></script>
+    <script
+      src="http://34.28.42.134:8080/js/jquery.js"
+      type="text/javascript"
+    ></script>
+    <script
+      src="http://34.28.42.134:8080/js/unal.js"
+      type="text/javascript"
+    ></script>
+    <script
+      src="http://34.28.42.134:8080/js/bootstrap.bundle.min.js"
+      type="text/javascript"
+    ></script>
     <title>Inicio: Universidad Nacional de Colombia</title>
   </head>
 
