--- a/index.html
+++ b/index.html
@@ -21,74 +21,74 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="http://34.28.42.134:8080/css/frontend.css"
+      href="https://ingenieria.unal.edu.co/lab101/suba-unal/css/frontend.css"
       media="all"
     />
     <link
       rel="stylesheet"
       type="text/css"
-      href="http://34.28.42.134:8080/css/bootstrap.min.css"
+      href="https://ingenieria.unal.edu.co/lab101/suba-unal/css/bootstrap.min.css"
       media="all"
     />
     <link
       rel="stylesheet"
       type="text/css"
-      href="http://34.28.42.134:8080/css/bootstrap-theme.min.css"
+      href="https://ingenieria.unal.edu.co/lab101/suba-unal/css/bootstrap-theme.min.css"
       media="all"
     />
     <link
       rel="stylesheet"
       type="text/css"
-      href="http://34.28.42.134:8080/css/reset.css"
+      href="https://ingenieria.unal.edu.co/lab101/suba-unal/css/reset.css"
       media="all"
     />
     <link
       rel="stylesheet"
       type="text/css"
-      href="http://34.28.42.134:8080/css/unal.css"
+      href="https://ingenieria.unal.edu.co/lab101/suba-unal/css/unal.css"
       media="all"
     />
     <link
       rel="stylesheet"
       type="text/css"
-      href="http://34.28.42.134:8080/css/base.css"
+      href="https://ingenieria.unal.edu.co/lab101/suba-unal/css/base.css"
       media="all"
     />
     <link
       rel="stylesheet"
       type="text/css"
-      href="http://34.28.42.134:8080/css/tablet.css"
+      href="https://ingenieria.unal.edu.co/lab101/suba-unal/css/tablet.css"
       media="all"
     />
     <link
       rel="stylesheet"
       type="text/css"
-      href="http://34.28.42.134:8080/css/phone.css"
+      href="https://ingenieria.unal.edu.co/lab101/suba-unal/css/phone.css"
       media="all"
     />
     <link
       rel="stylesheet"
       type="text/css"
-      href="http://34.28.42.134:8080/css/small.css"
+      href="https://ingenieria.unal.edu.co/lab101/suba-unal/css/small.css"
       media="all"
     />
     <link
       rel="stylesheet"
       type="text/css"
-      href="http://34.28.42.134:8080/css/printer.css"
+      href="https://ingenieria.unal.edu.co/lab101/suba-unal/css/printer.css"
       media="print"
     />
 
     <script
-      src="http://34.28.42.134:8080/js/jquery.js"
+      src="https://ingenieria.unal.edu.co/lab101/suba-unal/js/jquery.js"
       type="text/javascript"
     ></script>
     <script
-      src="http://34.28.42.134:8080/js/unal.js"
+      src="https://ingenieria.unal.edu.co/lab101/suba-unal/js/unal.js"
       type="text/javascript"
     ></script>
     <script
-      src="http://34.28.42.134:8080/js/bootstrap.bundle.min.js"
+      src="https://ingenieria.unal.edu.co/lab101/suba-unal/js/bootstrap.bundle.min.js"
       type="text/javascript"
     ></script>
     <title>Inicio: Universidad Nacional de Colombia</title>
