--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<!--
+  TO MINIFY UNAL.CSS:
+  cleancss -o .\css\unal.min.css .\css\unal.css
+-->
 <!DOCTYPE html>
 <html>
   <head>
@@ -21,76 +25,22 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="https://ingenieria.unal.edu.co/lab101/suba-unal/css/frontend.css"
+      href="./css/bootstrap.min.css"
       media="all"
     />
     <link
       rel="stylesheet"
       type="text/css"
-      href="https://ingenieria.unal.edu.co/lab101/suba-unal/css/bootstrap.min.css"
+      href="./css/bootstrap-theme.min.css"
       media="all"
     />
     <link
       rel="stylesheet"
       type="text/css"
-      href="https://ingenieria.unal.edu.co/lab101/suba-unal/css/bootstrap-theme.min.css"
+      href="./css/unal.min.css"
       media="all"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://ingenieria.unal.edu.co/lab101/suba-unal/css/reset.css"
-      media="all"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://ingenieria.unal.edu.co/lab101/suba-unal/css/unal.css"
-      media="all"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://ingenieria.unal.edu.co/lab101/suba-unal/css/base.css"
-      media="all"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://ingenieria.unal.edu.co/lab101/suba-unal/css/tablet.css"
-      media="all"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://ingenieria.unal.edu.co/lab101/suba-unal/css/phone.css"
-      media="all"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://ingenieria.unal.edu.co/lab101/suba-unal/css/small.css"
-      media="all"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://ingenieria.unal.edu.co/lab101/suba-unal/css/printer.css"
-      media="print"
     />
 
-    <script
-      src="https://ingenieria.unal.edu.co/lab101/suba-unal/js/jquery.js"
-      type="text/javascript"
-    ></script>
-    <script
-      src="https://ingenieria.unal.edu.co/lab101/suba-unal/js/unal.js"
-      type="text/javascript"
-    ></script>
-    <script
-      src="https://ingenieria.unal.edu.co/lab101/suba-unal/js/bootstrap.bundle.min.js"
-      type="text/javascript"
-    ></script>
     <title>Inicio: Universidad Nacional de Colombia</title>
   </head>
 
@@ -217,7 +167,7 @@
               </nav>
             </div>
             <ul class="socialLinks d-none d-md-block">
-              <li>
+              <li style="list-style: none">
                 <a
                   href="https://www.facebook.com/UNALOficial"
                   target="_blank"
@@ -225,7 +175,7 @@
                   title="Página oficial en Facebook"
                 ></a>
               </li>
-              <li>
+              <li style="list-style: none">
                 <a
                   href="https://twitter.com/UNALOficial"
                   target="_blank"
@@ -233,7 +183,7 @@
                   title="Cuenta oficial en Twitter"
                 ></a>
               </li>
-              <li>
+              <li style="list-style: none">
                 <a
                   href="https://www.youtube.com/channel/UCnE6Zj2llVxcvL5I38B0Ceg"
                   target="_blank"
@@ -370,7 +320,7 @@
 
     <!-- Footer -->
     <footer class="clear container-fluid">
-      <div class="row">
+      <div class="row" style="font-size: 0.8em; line-height: 1.1em">
         <nav class="col-lg-3 col-md-3 col-sm-4 col-6 gobiernoLinea">
           <a href="http://www.legal.unal.edu.co" target="_top">Régimen Legal</a>
           <a href="http://personal.unal.edu.co" target="_top">Talento humano</a>
