images folder added at Docker copy

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8" />
     <link
       rel="shortcut icon"
-      href="./images/favicon.ico"
+      href="https://ingenieria.unal.edu.co/lab101/suba-unal/images/favicon.ico"
       type="/image/x-icon"
     />
 
@@ -25,19 +25,19 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="./css/bootstrap.min.css"
+      href="https://ingenieria.unal.edu.co/lab101/suba-unal/css/bootstrap.min.css"
       media="all"
     />
     <link
       rel="stylesheet"
       type="text/css"
-      href="./css/bootstrap-theme.min.css"
+      href="https://ingenieria.unal.edu.co/lab101/suba-unal/css/bootstrap-theme.min.css"
       media="all"
     />
     <link
       rel="stylesheet"
       type="text/css"
-      href="./css/unal.min.css"
+      href="https://ingenieria.unal.edu.co/lab101/suba-unal/css/unal.min.css"
       media="all"
     />
 
@@ -51,7 +51,7 @@
         <li>
           <a href="http://correo.unal.edu.co" target="_blank"
             ><img
-              src="./images/icnServEmail.png"
+              src="https://ingenieria.unal.edu.co/lab101/suba-unal/images/icnServEmail.png"
               width="32"
               height="32"
               alt="Correo Electrónico"
@@ -61,7 +61,7 @@
         <li>
           <a href="https://dninfoa.unal.edu.co" target="_blank"
             ><img
-              src="./images/icnServSia.png"
+              src="https://ingenieria.unal.edu.co/lab101/suba-unal/images/icnServSia.png"
               width="32"
               height="32"
               alt="Dirección Nacional de Información Académica"
@@ -71,7 +71,7 @@
         <li>
           <a href="http://bibliotecas.unal.edu.co" target="_blank"
             ><img
-              src="./images/icnServLibrary.png"
+              src="https://ingenieria.unal.edu.co/lab101/suba-unal/images/icnServLibrary.png"
               width="32"
               height="32"
               alt="Biblioteca"
@@ -81,7 +81,7 @@
         <li>
           <a href="http://personal.unal.edu.co" target="_blank"
             ><img
-              src="./images/icnServCall.png"
+              src="https://ingenieria.unal.edu.co/lab101/suba-unal/images/icnServCall.png"
               width="32"
               height="32"
               alt="Convocatorias"
@@ -91,7 +91,7 @@
         <li>
           <a href="http://identidad.unal.edu.co"
             ><img
-              src="./images/icnServIdentidad.png"
+              src="https://ingenieria.unal.edu.co/lab101/suba-unal/images/icnServIdentidad.png"
               width="32"
               height="32"
               alt="Identidad UNAL"
@@ -105,7 +105,7 @@
         <a href="https://unal.edu.co">
           <svg width="93%" height="93%">
             <image
-              xlink:href="./images/escudoUnal.svg"
+              xlink:href="https://ingenieria.unal.edu.co/lab101/suba-unal/images/escudoUnal.svg"
               width="100%"
               height="100%"
               class="hidden-print"
@@ -113,7 +113,7 @@
             />
           </svg>
           <img
-            src="./images/escudoUnal_black.png"
+            src="https://ingenieria.unal.edu.co/lab101/suba-unal/images/escudoUnal_black.png"
             class="d-none d-print-block"
             alt="Escudo de la Universidad Nacional de Colombia"
           />
@@ -123,7 +123,7 @@
         <img
           class="hidden-print"
           alt="Escudo de la República de Colombia"
-          src="./images/sealColombia.png"
+          src="https://ingenieria.unal.edu.co/lab101/suba-unal/images/sealColombia.png"
           width="66"
           height="66"
         />
@@ -131,7 +131,7 @@
         <img
           class="d-none d-print-block"
           alt="Escudo de la República de Colombia"
-          src="./images/sealColombia_black.png"
+          src="https://ingenieria.unal.edu.co/lab101/suba-unal/images/sealColombia_black.png"
           width="66"
           height="66"
         />
@@ -300,7 +300,7 @@
 
     <iframe
       id="myIframe"
-      src="http://34.28.42.134"
+      src="https://ingenieria.unal.edu.co/lab101/wp-suba-unal/"
       frameborder="0"
       style="width: 100vw; height: 100vh; border: none; overflow: hidden"
     ></iframe>
