images folder added at Docker copy

--- a/index.html
+++ b/index.html
@@ -440,14 +440,14 @@
                   <img
                     class="hidden-print"
                     alt="Orgullo UN"
-                    src="images/log_orgullo.png"
+                    src="https://ingenieria.unal.edu.co/lab101/suba-unal/images/log_orgullo.png"
                     width="78"
                     height="21"
                   />
                   <img
                     class="d-none d-print-block"
                     alt="Orgullo UN"
-                    src="images/log_orgullo_black.png"
+                    src="https://ingenieria.unal.edu.co/lab101/suba-unal/images/log_orgullo_black.png"
                     width="94"
                     height="37"
                   />
@@ -459,14 +459,14 @@
                   <img
                     class="hidden-print"
                     alt="Agencia de Noticias"
-                    src="images/log_agenc.png"
+                    src="https://ingenieria.unal.edu.co/lab101/suba-unal/images/log_agenc.png"
                     width="94"
                     height="25"
                   />
                   <img
                     class="d-none d-print-block"
                     alt="Agencia de Noticias"
-                    src="images/log_agenc_black.png"
+                    src="https://ingenieria.unal.edu.co/lab101/suba-unal/images/log_agenc_black.png"
                     width="94"
                     height="37"
                   />
@@ -478,7 +478,7 @@
                 <a class="col-md-12 col-sm-6 col-6" href="https://www.gov.co/">
                   <img
                     alt="Portal Único del Estado Colombiano"
-                    src="images/log_gobiern.png"
+                    src="https://ingenieria.unal.edu.co/lab101/suba-unal/images/log_gobiern.png"
                     width="67"
                     height="51"
                   />
@@ -489,7 +489,7 @@
                 >
                   <img
                     alt="Contaduría General de la República"
-                    src="images/log_contra.png"
+                    src="https://ingenieria.unal.edu.co/lab101/suba-unal/images/log_contra.png"
                     width="67"
                     height="51"
                   />
