--- a/index.html
+++ b/index.html
@@ -22,18 +22,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="robots" content="all" />
 
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://ingenieria.unal.edu.co/lab101/suba-unal/css/bootstrap.min.css"
-      media="all"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://ingenieria.unal.edu.co/lab101/suba-unal/css/bootstrap-theme.min.css"
-      media="all"
-    />
+    <style type="text/css">
+
+    </style>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
     <link
       rel="stylesheet"
       type="text/css"
@@ -300,9 +293,10 @@
 
     <iframe
       id="myIframe"
-      src="https://ingenieria.unal.edu.co/lab101/wp-suba-unal/"
+      src="http://34.28.42.134"
       frameborder="0"
       style="width: 100vw; height: 100vh; border: none; overflow: hidden"
+      crossorigin="anonymous"
     ></iframe>
 
     <script>
