--- a/index.html
+++ b/index.html
@@ -96,15 +96,11 @@
     <header id="unalTop">
       <div class="logo" style="background-color: #3a3a3a">
         <a href="https://unal.edu.co">
-          <svg width="93%" height="93%">
-            <image
-              xlink:href="https://ingenieria.unal.edu.co/lab101/suba-unal/images/escudoUnal.svg"
-              width="100%"
-              height="100%"
-              class="hidden-print"
-              alt="Escudo de la Universidad Nacional de Colombia"
-            />
-          </svg>
+          <img src="https://ingenieria.unal.edu.co/lab101/suba-unal/images/escudoUnal.png" 
+            alt="Escudo de la Universidad Nacional de Colombia" 
+            class="hidden-print"
+            width="93%"
+          />
           <img
             src="https://ingenieria.unal.edu.co/lab101/suba-unal/images/escudoUnal_black.png"
             class="d-none d-print-block"
