iframe src updated

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 
     <iframe
       id="myIframe"
-      src="http://34.28.42.134"
+      src="https://34.28.42.134"
       frameborder="0"
       style="width: 100vw; height: 100vh; border: none; overflow: hidden"
       crossorigin="anonymous"
