iframe src updated

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       </ul>
     </div>
     <header id="unalTop">
-      <div class="logo" style="background-color: #3a3a3a">
+      <div class="logo">
         <a href="https://unal.edu.co">
           <img src="https://ingenieria.unal.edu.co/lab101/suba-unal/images/escudoUnal.png" 
             alt="Escudo de la Universidad Nacional de Colombia" 
