iframe links update

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 
     <iframe
       id="myIframe"
-      src="https://34.28.42.134"
+      src="https://ingenieria.unal.edu.co/lab101/wp-suba-unal/"
       frameborder="0"
       style="width: 100vw; height: 100vh; border: none; overflow: hidden"
       crossorigin="anonymous"
@@ -363,7 +363,7 @@
               .addEventListener("click", function (event) {
                 event.preventDefault();
                 document.getElementById("myIframe").src =
-                  "https://34.28.42.134/contact/";
+                  "https://ingenieria.unal.edu.co/lab101/wp-suba-unal/contact/";
               });
           </script>
 
